force-app/main/default/objects/AF_Handover__c/AF_Handover__c.object-meta.xml
<CustomObject>
    <label>Handover</label>
    <nameField>
        <displayFormat>HO-{00000}</displayFormat>
        <label>Handover Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handovers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>