force-app/main/default/objects/AF_Handover__c/fields/AF_Account__c.field-meta.xml
<CustomField>
    <fullName>AF_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Handovers</relationshipLabel>
    <relationshipName>AF_Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>