force-app/main/default/objects/AF_Handover__c/fields/AF_BuyerAcknowledgementComplete__c.field-meta.xml
<CustomField>
    <fullName>AF_BuyerAcknowledgementComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer Acknowledgement Complete?</label>
    <type>Checkbox</type>
</CustomField>