force-app/main/default/objects/AF_Handover__c/fields/AF_ChecklistComplete__c.field-meta.xml
<CustomField>
    <fullName>AF_ChecklistComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Derived: all checklist items true. Populate via flow, not a stored formula (checklist item set is still flat/pending client, 10.12 ASS-1).</description>
    <label>Checklist Complete?</label>
    <type>Checkbox</type>
</CustomField>