force-app/main/default/objects/AF_Handover__c/fields/AF_ClosedWonGatePassed__c.field-meta.xml
<CustomField>
    <fullName>AF_ClosedWonGatePassed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handover complete + payment gate. Blocks Closed Won until true — wire via validation rule/flow.</description>
    <label>Closed Won Gate Passed?</label>
    <type>Checkbox</type>
</CustomField>