force-app/main/default/objects/AF_Handover__c/fields/AF_CustomerSignOff__c.field-meta.xml
<CustomField>
    <fullName>AF_CustomerSignOff__c</fullName>
    <description>Digital/e-signature excluded from R1.</description>
    <label>Customer Sign-Off</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Physically Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>