force-app/main/default/objects/AF_Handover__c/fields/AF_DeliveryNoteGenerated__c.field-meta.xml
<CustomField>
    <fullName>AF_DeliveryNoteGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Note Generated?</label>
    <type>Checkbox</type>
</CustomField>