force-app/main/default/objects/AF_Handover__c/fields/AF_FollowUpTaskCreated__c.field-meta.xml
<CustomField>
    <fullName>AF_FollowUpTaskCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the auto 2-days-post-handover follow-up Task is created.</description>
    <label>Follow-Up Task Created?</label>
    <type>Checkbox</type>
</CustomField>