force-app/main/default/objects/AF_Handover__c/fields/AF_HandoverDate__c.field-meta.xml
<CustomField>
    <fullName>AF_HandoverDate__c</fullName>
    <label>Handover Date</label>
    <type>DateTime</type>
</CustomField>