force-app/main/default/objects/AF_Handover__c/fields/AF_InsuranceFormUploaded__c.field-meta.xml
<CustomField>
    <fullName>AF_InsuranceFormUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Form Uploaded?</label>
    <type>Checkbox</type>
</CustomField>