force-app/main/default/objects/AF_Handover__c/fields/AF_Location__c.field-meta.xml
<CustomField>
    <fullName>AF_Location__c</fullName>
    <label>Handover Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>