force-app/main/default/objects/AF_Handover__c/fields/AF_ServiceContractAgreementComplete__c.field-meta.xml
<CustomField>
    <fullName>AF_ServiceContractAgreementComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Contract Agreement Complete?</label>
    <type>Checkbox</type>
</CustomField>