force-app/main/default/objects/AF_Handover__c/fields/AF_Status__c.field-meta.xml
<CustomField>
    <fullName>AF_Status__c</fullName>
    <description>Completion should set Opportunity SO Status = Delivered and gate Closed Won — wire via flow.</description>
    <label>Handover Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Documents Complete</fullName>
            </value>
            <value>
                <fullName>Customer Signed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>