force-app/main/default/objects/AF_Handover__c/fields/AF_TrafficFormUploaded__c.field-meta.xml
<CustomField>
    <fullName>AF_TrafficFormUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manual upload only — never Salesforce-generated (government PDF).</description>
    <label>Traffic Form Uploaded?</label>
    <type>Checkbox</type>
</CustomField>