force-app/main/default/objects/AF_Handover__c/fields/AF_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>AF_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Handovers</relationshipLabel>
    <relationshipName>AF_Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>