force-app/main/default/objects/AF_Handover__c/fields/AF_VehicleRepairDisclaimerComplete__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleRepairDisclaimerComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Repair Disclaimer Complete?</label>
    <type>Checkbox</type>
</CustomField>