force-app/main/default/objects/AF_Handover__c/fields/AF_VehicleSaleAgreementComplete__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleSaleAgreementComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Sale Agreement Complete?</label>
    <type>Checkbox</type>
</CustomField>