force-app/main/default/objects/AF_Handover__c/fields/AF_WarrantyAgreementComplete__c.field-meta.xml
<CustomField>
    <fullName>AF_WarrantyAgreementComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warranty Agreement Complete?</label>
    <type>Checkbox</type>
</CustomField>